# ellie

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  PLAN.md  README.md  RLM.md  Thread:Branch Core Refactor.md  lefthook.yml  package.json  plan.md  skills-lock.json  turbo.json
.agents/skills/bun-test/: SKILL.md
.agents/skills/drizzle-orm/: SKILL.md
.agents/skills/elysiajs/: SKILL.md
.agents/skills/react-dev/: README.md  SKILL.md
.agents/skills/tailwind-v4-shadcn/: SKILL.md
.agents/skills/turborepo/: SKILL.md
.claude/: launch.json
agent_docs/: ai-package.md  database.md  durable-streams.md  jsonl-logger.md  rpc-layer.md
apps/app/: bunfig.toml  package.json  tsconfig.json
apps/cli/: README.md  deps.go  go.mod  go.sum  package.json
apps/react/: components.json  eslint.config.js  package.json  tsconfig.app.json
apps/server/: bunfig.toml  package.json  tsconfig.json
apps/stt/: Cargo.toml  dev.ts  package.json  setup.ts
apps/stt/src/: config.rs  engine.rs  main.rs  pipeline.rs
apps/stt/src/audio_toolkit/: mod.rs
apps/stt/src/audio_toolkit/audio/: mod.rs
apps/stt/src/audio_toolkit/vad/: mod.rs
apps/stt/src/routes/: health.rs  mod.rs  models.rs  transcribe.rs
apps/studio/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/: build.ts  components.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
patches/: khroma@2.1.0.patch  streamdown@2.3.0.patch
research/: CLAW_COMPARISON.md  RESEARCH.md  RLM.md
scripts/: build-release.ts  run-conformance.ts
(+928 files in other folders)
