[package]
name = "ellie-stt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stt-server"
path = "src/main.rs"

[dependencies]
# STT engines (match Handy's proven versions)
transcribe-rs = { version = "0.2.8", features = [
	"whisper",
	"parakeet",
	"moonshine",
	"sense_voice",
	"gigaam"
] }
# VAD (same git dep as Handy)
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
# Resampling
rubato = "0.16.2"
# HTTP server
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
# Audio decoding
hound = "3.5.1"
# Text processing (required by copied text.rs from Handy)
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
once_cell = "1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling / logging
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
# CLI config
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
